--- a/gateway/src/main/resources/bootstrap.properties
+++ b/gateway/src/main/resources/bootstrap.properties
@@ -1,9 +1,8 @@
 spring.application.name=zuul-gateway
 
-spring.cloud.config.enabled=true
 spring.cloud.config.uri=http://localhost:10090
-#management.endpoint.refresh.enabled=true
+spring.cloud.config.enabled=true
 management.endpoints.web.exposure.include=refresh
-
+replace.route.filter.map={}
 
 
