--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -1,3 +1,6 @@
 spring.application.name=eureka-server
+
+
 spring.cloud.config.uri=http://localhost:10090
-management.security.enabled=false
+spring.cloud.config.enabled=true
+management.endpoints.web.exposure.include=refresh
