--- a/user-service/src/main/resources/bootstrap.properties
+++ b/user-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,6 @@
 spring.application.name=user-service
+
+
 spring.cloud.config.uri=http://localhost:10090
-management.security.enabled=false
+spring.cloud.config.enabled=true
+management.endpoints.web.exposure.include=refresh
